<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="this_is_my_first_button">This is my first button</string>
    <string name="this_first_textview">this isn`t my first\n textview</string>
    <string name="hint_mail_mail_com">mail@mail.com</string>


    <string name="app_name">View and ViewGroup</string>

    <string name="solutions_hello_world">Hello World!</string>
    <string name="solutions_box_one_text">Box One</string>
    <string name="solutions_box_two_text">Box Two</string>
    <string name="solutions_box_three_text">Box Three</string>
    <string name="solutions_box_four_text">Box Four</string>
    <string name="solutions_box_five_text">Box Five</string>
    <string name="solutions_button_red_text">Red</string>
    <string name="solutions_button_yellow_text">Yellow</string>
    <string name="solutions_button_green_text">Green</string>
    <string name="linear_view">Linear view</string>
    <string name="constraint_view">Constraint view</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help
        of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="name">Avengers:________ End Game</string>
    <string name="age">13+</string>
    <string name="back">Back</string>
    <string name="_125_reviews">125 Reviews</string>
</resources>