<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="298dp"
        android:background="@drawable/orig_ic"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_56dp"
        android:drawableLeft="@drawable/ic_path"
        android:drawablePadding="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_path"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/maska"
        android:layout_width="match_parent"
        android:layout_height="298dp"

        android:background="@drawable/ic_mask"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_24dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:numStars="5"
        android:rating="3.5"
        android:saveEnabled="true"
        android:stepSize="0.5"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_24dp"
        android:text="@string/_125_reviews"
        android:textColor="@color/color_back"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/rating" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="@dimen/size_4dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_15dp"
        android:text="@string/tag"
        android:textColor="@color/color_tag"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_15dp"
        android:layout_marginBottom="@dimen/size_4dp"
        android:text="@string/name"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8dp"
        android:text="@string/age"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="@dimen/size_16dp"
        android:textSize="@dimen/size_12sp"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/storyLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_24dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_15dp"
        android:text="@string/storyline"
        android:textColor="@color/colorStoryLine"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/storyDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_15dp"
        android:text="@string/description"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/size_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyLine" />

    <TextView
        android:id="@+id/titleCast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:text="@string/cast"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyDescription" />

    <TextView
        android:id="@+id/actorOneAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:background="@drawable/ic_robert"
        android:textColor="@color/colorMyGray"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/actorTwoAvatar"
        app:layout_constraintTop_toBottomOf="@id/titleCast" />

    <TextView
        android:id="@+id/nameActorOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6dp"
        android:text="@string/robert_downey_jr"
        android:textColor="@color/colorActorName"
        android:textSize="@dimen/size_12sp"
        app:layout_constraintEnd_toEndOf="@+id/actorOneAvatar"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@id/actorOneAvatar"
        app:layout_constraintRight_toRightOf="@id/actorOneAvatar"
        app:layout_constraintStart_toStartOf="@+id/actorOneAvatar"
        app:layout_constraintTop_toBottomOf="@id/actorOneAvatar" />

    <TextView
        android:id="@+id/actorTwoAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:background="@drawable/ic_evans"
        android:textColor="@color/colorMyGray"
        app:layout_constraintBottom_toBottomOf="@id/actorOneAvatar"
        app:layout_constraintLeft_toRightOf="@+id/actorOneAvatar"
        app:layout_constraintRight_toLeftOf="@id/actorThreeAvatar" />

    <TextView
        android:id="@+id/nameActorTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6dp"
        android:text="@string/chris_evans"
        android:textColor="@color/colorActorName"
        android:textSize="@dimen/size_12sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@id/actorTwoAvatar"
        app:layout_constraintRight_toRightOf="@id/actorTwoAvatar"
        app:layout_constraintTop_toBottomOf="@id/actorOneAvatar" />

    <TextView
        android:id="@+id/actorThreeAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:background="@drawable/ic_ruffalo"
        app:layout_constraintBottom_toBottomOf="@id/actorOneAvatar"
        app:layout_constraintLeft_toRightOf="@+id/actorTwoAvatar"
        app:layout_constraintRight_toLeftOf="@id/actorFourthAvatar" />

    <TextView
        android:id="@+id/nameActorThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6dp"
        android:text="@string/mark_ruffalo"
        android:textColor="@color/colorActorName"
        android:textSize="@dimen/size_12sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@id/actorThreeAvatar"
        app:layout_constraintRight_toRightOf="@id/actorThreeAvatar"
        app:layout_constraintTop_toBottomOf="@id/actorThreeAvatar" />

    <TextView
        android:id="@+id/actorFourthAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/ic_hemsworth"
        android:layout_marginEnd="@dimen/size_15dp"
        app:layout_constraintBottom_toBottomOf="@id/actorOneAvatar"
        app:layout_constraintLeft_toRightOf="@+id/actorThreeAvatar"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/nameActorFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6dp"
        android:text="@string/chris_hemsworth"
        android:textColor="@color/colorActorName"
        android:textSize="@dimen/size_12sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@id/actorFourthAvatar"
        app:layout_constraintRight_toRightOf="@id/actorFourthAvatar"
        app:layout_constraintTop_toBottomOf="@id/actorFourthAvatar" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
